# chessx

./: .cvsignore  .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog  ChangeLog.md  ChangeLog.txt  Doxyfile  INSTALL  INSTALL.md  InnoSetup.iss  Makefile  Makefile.conf  Makefile.vc  README.developers  README.developers.md  README.md  TODO  TODO.md  chessdatabase.kdevelop  chessdatabase.pro  chessx.kdevelop  chessx.pro  ctgdatabase.h  lcov.sh  lcov_clear.sh  lcov_zero.sh  q4make  q4make.bat  resources.qrc  setup.iss  setup7-32.iss  setup7-64.iss  setup7-64m.iss  setupXP.iss  shell_scid  timeseal.pro  translations.qrc  vcpkg.json
dep/scid/: CMakeLists.txt
dep/scid/code/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  TODO  azure-pipelines.yml  configure  scid_es.eco  scid_fr.eco
src/: .cvsignore  CMakeLists.txt  Makefile  bytebuf.h  chessx.rc  codec.h  codec_pgn.h  common.h  common.pro  containers.h  crosstab.h  engine.cpp  engine.h  fullmove.h  hfilter.h  main.cpp  movetree.h  nagtext.h  namebase.h  optable.h  pbook.h  probe.cpp  recog.cpp  scidbase.h  sortcache.cpp  sortcache.h  spellchk.cpp  sqmove.h  src.pro  tkscid.cpp
src/compat/: qt6compat.h
src/compatibility/qt34/: qcache.h  qmainwindow.h  qmemarray.h  qpopupmenu.h  qprocess.h  qptrlist.h  qvaluestack.h  qvaluevector.h
src/database/: .cvsignore  Makefile  analysis.cpp  analysis.h  annotation.cpp  annotation.h  arenabook.cpp  arenabook.h  bitboard.cpp  bitboard.h  bitfind.h  board.cpp  board.h  chessxdatabase.cpp  chessxdatabase.h  circularbuffer.h  clipboarddatabase.h  common.cpp  common.h  ctgbookwriter.cpp  ctgbookwriter.h  ctgdatabase.cpp  ctgdatabase.h  cxdassign.cpp  cxdassign.h  cxdcblock.cpp  cxdcblock.h  cxdcfile.cpp  cxdcfile.h  cxdcompact.cpp  cxdcompact.h  cxdflags.cpp  cxdflags.h  cxdindex.cpp  cxdmoves.cpp  cxdmoves.h  cxdsaxhandler.h  database.cpp  database.h  database.pro  (+150 more)
src/database/scid/: sciddatabase.cpp  sciddatabase.h
src/dialogs/: aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  actiondialog.cpp  actiondialog.h  actiondialog.ui  boardsearchdialog.cpp  boardsearchdialog.h  boardsearchdialog.ui  commentdialog.cpp  commentdialog.h  commentdialog.ui  copydialog.cpp  copydialog.h  databasetagdialog.cpp  databasetagdialog.h  databasetagdialog.ui  dlgsavebook.cpp  dlgsavebook.h  dlgsavebook.ui  matchparameterdlg.cpp  matchparameterdlg.h  matchparameterdlg.ui  onlinebase.cpp  onlinebase.h  onlinebase.ui  preferences.cpp  preferences.h  preferences.ui  promotiondialog.cpp  promotiondialog.h  promotiondialog.ui  quicksearch.cpp  quicksearch.h  recipientaddressdialog.cpp  recipientaddressdialog.h  renametagdialog.cpp  renametagdialog.h  savedialog.cpp  savedialog.h  (+8 more)
src/docbook/: chessx.ced  chessx.sgm  fdl.sgm  helpbrowser.sgm  quickstart.sgm  reference.sgm
src/guess/: attacks.h  common.h  compileeco.cpp  compileeco.h  dstring.h  guess.cpp  guess.h  guess_attacks.h  guess_common.h  guess_compileeco.cpp  guess_compileeco.h  guess_guessengine.cpp  guess_guessengine.h  guess_misc.cpp  guess_misc.h  guess_movelist.cpp  guess_movelist.h  guess_position.cpp  guess_position.h  guess_recog.cpp  guess_recog.h  guess_sqlist.h  guess_sqmove.h  guess_sqset.h  guessengine.cpp  guessengine.h  hash.h  misc.cpp  misc.h  movelist.cpp  movelist.h  myassert.cpp  position.cpp  position.h  recog.cpp  recog.h  sqlist.h  sqmove.h  sqset.h  timer.h
src/gui/: .cvsignore  GameMimeData.h  TextBrowserEx.h  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  actiondialog.cpp  actiondialog.ui  analysiswidget.cpp  analysiswidget.h  analysiswidget.ui  annotationtimeedit.cpp  annotationtimeedit.h  annotationwidget.cpp  annotationwidget.h  annotationwidget.ui  boardsearchdialog.cpp  boardsearchdialog.h  boardsetup.cpp  boardsetup.h  boardsetup.ui  boardsetuptoolbutton.cpp  boardsetuptoolbutton.h  boardtheme.cpp  boardtheme.h  boardview.cpp  boardview.h  boardviewex.cpp  boardviewex.h  boardviewex.ui  centipawngraph.cpp  centipawngraph.h  chartwidget.cpp  chartwidget.h  chessbrowser.cpp  chessbrowser.h  chessbrowserbridge.cpp  chessbrowserbridge.h  chessbrowserpage.cpp  chessbrowserpage.h  (+143 more)
src/gui/ooo/: converter.cpp  converter.h  document.cpp  formatproperty.h  (+7 more)
src/polyglot/: attack.cpp  book.h  fen.cpp  move.h  move_legal.cpp  util.h
src/quazip/: CMakeLists.txt  JlCompress.cpp  crypt.h  ioapi.h  qioapi.cpp  qt6compat.h  quaadler32.cpp  quachecksum32.h  quacrc32.cpp  quacrc32.h  quagzipfile.cpp  quaziodevice.cpp  quazip.cpp  quazip.h  quazip_global.h  quazipdir.cpp  quazipdir.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  unzip.cpp  unzip.h  zip.cpp  zip.h
src/timeseal/: Changelog.md  README.md  config.h  mit.md  zseal.c
tests/: CMakeLists.txt  GNUmakefile  README  classes_tested.txt  databaseconversiontest.cpp  doctest_main.cpp  playerdatabasetest.h  resourcepath.h.in
tests/benchmark/: Makefile  pgnspeed.cpp
tests/cppunit/: Doxyfile  README  boardtest.cpp  databaseconversiontest.h  outputtest.cpp  outputtest.h  pgndatabasetest.cpp  pgndatabasetest.h  playerdatabasechangestest.cpp  playerdatabasetest.cpp  playerdatabasetest.h  querytest.cpp  querytest.h  test_runner.kdevelop  test_runner.pro
tests/filter/: main.cpp
tests/playerdatabase/: main.cpp  playerdatabase.pro
tests/qtestlib/: GNUmakefile  pgndatabasetest.cpp  spellcheckertests.h  testrunner.cpp
tests/tags/: main.cpp
tests/unittests/: CMakeLists.txt  boardtest.cpp  boardtest.h  classes_tested.txt  databaseconversiontest.cpp  databaseconversiontest.h  filtertest.cpp  filtertest.h  gametest.cpp  gametest.h  indexitemtest.cpp  indexitemtest.h  indextest.cpp  indextest.h  pgndatabasetest.cpp  pgndatabasetest.h  playerdatabasetest.cpp  playerdatabasetest.h  positionsearchtest.cpp  positionsearchtest.h  qttestmain.cpp.in  resourcepath.h.in  spellcheckertest.cpp  spellcheckertest.h  spellcheckertests.cpp  spellcheckertests.h  stringtagvaluestest.cpp  stringtagvaluestest.h  taglisttest.cpp  taglisttest.h  test_index.cpp  test_integralmetrics.cpp  test_resultscounter.cpp  testrunner.cpp  testrunner.pro
(+1045 files in other folders)
